--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.8.7 (unreleased)
 ------------------
 
+- BUG-60: Catch fake entries in get-asset filters
+
 - ZON-1271: Polish footer
 
 
