--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.8.8 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 1.8.7 (2014-12-12)
 ------------------
 
