--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.8.8 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- FRIED-37: XSLT expects uniqueIds of image groups to have a trailing slash.
 
 
 1.8.7 (2014-12-12)
