--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.8.8 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- ZON-1270: Overall polishing for hp
 
 
 1.8.7 (2014-12-12)
