--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.8.8 (unreleased)
 ------------------
 
+- BUG-62: add series tag to webtrekk Z_WT_KENNUNG
+
 - BUG-19: Make headervideo more failsave
 
 - ZON-1270: Overall polishing for hp
