--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.8.8 (unreleased)
 ------------------
 
+- WEB-407: Add referrerCount Script
+
 - FRIED-37: XSLT expects uniqueIds of image groups to have a trailing slash.
 
 - BUG-19: Make headervideo more failsave
