--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.9 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 1.8.8 (2015-01-09)
 ------------------
 
