--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.9.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- FIX: Don't assume that Newsletter contains only references to Articles.
 
 
 1.9 (2015-01-13)
