--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.9.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- ZON-1290: Implement landing page for beta launch
 
 
 1.9.3 (2015-01-14)
