--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.9.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- FIX: Output real comment counts in website teasers.
 
 
 1.9.3 (2015-01-14)
