--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,13 +4,13 @@ Change log for zeit.web
 1.10.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-1301: Progressivley enhance beta toggle
 
 
 1.10.1 (2015-01-23)
 -------------------
 
-- Nothing changed yet.
+- FIX: Remove video html from templates
 
 
 1.10 (2015-01-23)
