--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - ZON-1301: Progressivley enhance beta toggle
 
+- ZON-1339: Adjust wording and styling for beta page
+
 
 1.10.1 (2015-01-23)
 -------------------
