--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.10.4 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.10.3 (2015-01-27)
 -------------------
 
