--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.10.4 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- HOTFIX: Fix fonts to include data-uri
 
 
 1.10.3 (2015-01-27)
