--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.10.5 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- FIX: Stop render breakdown if article block is not found
 
 
 1.10.4 (2015-01-28)
