--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - FIX: Stop render breakdown if article block is not found
 
+- HOTFIX: Minor text- and layout changes to /beta route
+
 
 1.10.4 (2015-01-28)
 -------------------
