--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.10.7 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.10.6 (2015-01-28)
 -------------------
 
