--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.10.7 (unreleased)
 -------------------
 
+- ZON-1343: Implement spektrum view, esi snippet and images
+
 - FIX: Repair block skipping via no_block that produces white pages
 
 - FIX: Punk imagegroup to image conversion into image block class
