--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.11.4 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.11.3 (2015-02-02)
 -------------------
 
