--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.12 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ZON-1332: Initiate comment section
 
 
 1.11 (2015-02-02)
