--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.11.4 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Spektrum.de in parquet: add Webtrekk click-tracking
 
 
 1.11.3 (2015-02-02)
