Back to development: 1.11.5

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.11.5 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.11.4 (2015-02-04)
 -------------------
 
