--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - Spektrum.de in parquet: add Webtrekk click-tracking
 
+- FIX: BUG-76
+
 
 1.11.3 (2015-02-02)
 -------------------
