--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,9 @@ Change log for zeit.web
 1.11.4 (unreleased)
 -------------------
 
-- Spektrum.de in parquet: add Webtrekk click-tracking
+- FIX: Spektrum.de in parquet: add Webtrekk click-tracking
+
+- FIX: Get rid of cornice and app_info overcomplications
 
 
 1.11.3 (2015-02-02)
