--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,8 @@ Change log for zeit.web
 
 - FIX: BUG-76
 
+- ZON-1351: Implement a basic admin page to post comments for any resource
+
 
 1.11.4 (2015-02-04)
 -------------------
