--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,8 @@ Change log for zeit.web
 
 - ZON-1296: At least, we have a video bar
 
+- ZON-1299: Implement series dropdown for video bar
+
 - BUG-79: Remove horizontal scrollbars in ZMO responsive screens
 
 - BUG-76: Remove img sizing in ad places
