--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.11.5 (unreleased)
 -------------------
 
+- ZON-1369: beta: add button/link 'to homepage'
+
 - ZON-1270: Polishing HP CSS
 
 - ZON-1296: At least, we have a video bar
