--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.13 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- HOTFIX: Reapply spektrum image view gone missing
 
 
 1.12 (2015-02-11)
