--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.13 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.12.1 (2015-02-11)
 -------------------
 
