--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.13 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- HOTFIX: Repair and test spektrum parquet tracking slugs
 
 
 1.12.1 (2015-02-11)
