ZON-1429: Dynamicize template links accross ZON and ZMO

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,9 @@ Change log for zeit.web
 1.14 (unreleased)
 -----------------
 
-- ZON-1413: mobil poliert
+- ZON-1424: Polishing mobile experience
+
+- ZON-1429: Dynamicize template links accross ZON and ZMO
 
 
 1.13 (2015-02-17)
