DEV-567: Add tracking information to links in RSS feed.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - ZON-1413: mobil poliert
 
+- DEV-567: Add tracking information to links in RSS feed.
+
 
 1.13 (2015-02-17)
 -----------------
