ZON-1392: The PEP8 :police_car: is at it again

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,8 +5,8 @@ Change log for zeit.web
 -----------------
 
 - ZON-1413: mobil poliert
-- ZON-1392: Kommentare gestyled
 
+- ZON-1392: Style comment section and forms
 
 
 1.13 (2015-02-17)
