--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.14 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ZON-1426: Enable plain text file rendering
 
 
 1.13 (2015-02-17)
