--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,9 @@ Change log for zeit.web
 1.15 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fixes for video stage
+
+- Fixes for IE8 
 
 
 1.14 (2015-02-20)
