--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.15 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ZON-1280: Tweak last modified date format string
 
 
 1.14 (2015-02-20)
