--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.15 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix navigation: fix bug where more is on the wrong side of the fence
 
 
 1.14 (2015-02-20)
