--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.16 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.15 (2015-02-24)
 -----------------
 
