--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.16 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ZON-1446: Implement active state for main navigation items
 
 
 1.15.2 (2015-02-24)
