--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.16 (unreleased)
 -----------------
 
+- ZON-1461: Add pagination
+
 - ZON-1446: Implement active state for main navigation items
 
 - ZON-1394: Enable a supertitle fallback for linkobjects and galleries
