ZON-1466: Update changes

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,8 @@ Change log for zeit.web
 
 - ZON-1459: Implement full view ("Komplettansicht") for articles
 
+- ZON-1466: Auto select correct teaser layout for series and columns
+
 - FIX: Fix navigation bug where more is on the wrong side of the fence
 
 - FIX: Snapshot on homepage now with description
