ZON-1315: CHANGES.txt

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,8 @@ Change log for zeit.web
 
 - ZON-1394: Enable a supertitle fallback for linkobjects and galleries
 
+- ZON-1315: Implement inline galleries
+
 - Fix navigation: fix bug where more is on the wrong side of the fence
 
 - Fixes for video stage
