--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -17,6 +17,8 @@ Change log for zeit.web
 
 - ZON-1459: Implement full view ("Komplettansicht") for articles
 
+- ZON-1467: Pull column teaser image from authorship
+
 - FIX: Fix navigation bug where more is on the wrong side of the fence
 
 - FIX: Snapshot on homepage now with description
