Back to development: 1.16.1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.16.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.16 (2015-03-03)
 -----------------
 
