--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.16.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- FIX: Restore default images in FF 35+
 
 
 1.16.1 (2015-03-05)
