--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,9 @@ Change log for zeit.web
 
 - ZON-1494: Set beta cookie lifetime to 30 days
 
+- BUG-216: Use proper encoding declaration for social flow (also applied in
+  1.15.4)
+
 
 1.16.2 (2015-03-06)
 -------------------
@@ -61,6 +64,11 @@ Change log for zeit.web
 - Fixes for IE8
 
 - Refactor header topics on CP
+
+
+1.15.4 (2015-03-16)
+------------------
+- BUG-216: Proper encoding for social flow 
 
 
 1.15.3 (2015-03-11)
