--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.18 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- FIX: Bring back the default image scales, for now.
 
 
 1.17 (2015-03-17)
