--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.17.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-1304: Schema.org markup for SiteNavigationElement.
 
 
 1.17.1 (2015-03-17)
