--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,8 @@ Change log for zeit.web
 
 - ZON-1498: Add dotted pager to slideshow galleries
 
+- ZON-1288: Add schema.org Item, Author, Image to articles
+
 
 1.17.1 (2015-03-17)
 -------------------
