--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ Change log for zeit.web
 
 - ZON-1498: Add dotted pager to slideshow galleries
 
+- Kill the singing robot
+
 
 1.17.1 (2015-03-17)
 -------------------
