--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,7 @@ Change log for zeit.web
 
 - ZON-1288: Add schema.org Item, Author, Image to articles
 
+- ZON-1526: Designate meta pagination for multipage articles
 
 
 1.17.1 (2015-03-17)
