fix/version-detection: Make version detection failsafe

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,6 +22,8 @@ Change log for zeit.web
 
 - Kill the singing robot
 
+- FIX: Make version detection failsafe
+
 
 1.17.1 (2015-03-17)
 -------------------
