--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.18.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.18.1 (2015-03-24)
 -------------------
 
