--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,15 +4,15 @@ Change log for zeit.web
 1.18.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fix border-width in navigation
 
 
 1.18.1 (2015-03-24)
 -------------------
 
-- Fixed ZMO menu icon
+- Fix ZMO menu icon
 
-- Fixed width of fullwidth teaser
+- Fix width of fullwidth teaser
 
 
 1.18 (2015-03-20)
