--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.18.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-1539: Add view for new centerpages
 
 
 1.18.1 (2015-03-24)
