BUG-168: fix nextread glitch

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.18.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- BUG-168: fix nextread glitch
 
 
 1.18.1 (2015-03-24)
