--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.18.2 (unreleased)
 -------------------
 
-- ZON-1493: Implement column article 😎
+- ZON-1493: Implement column article :sunglasses:
 
 - ZON-1531: iqd content ad in ZON and ZMO (commented out a this point, until officially live)
 
