--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.20 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.19 (2015-04-08)
 -----------------
 
