--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - Maintenance: clean up templates
 
+- ZON-1330: Social/sharing menu in articles
+
 
 1.19 (2015-04-08)
 -----------------
