--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,8 @@ Change log for zeit.web
 
 - ZON-1328: Add Infobox
 
+- ZON-1535: Community images can be loaded via configurable url
+
 
 1.19 (2015-04-08)
 -----------------
