--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.20.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.20 (2015-04-17)
 -----------------
 
