--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.20.2 (unreleased)
 -------------------
 
-- ZON-1509: Clean up CP view and avoid repeated layout filtering
+- FIX: Clean up centerpage view attributes and topic link objects
 
 
 1.20.1 (2015-04-17)
