--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.20.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-1626: fix/clearify vertical spaces on centerpages
 
 
 1.20.1 (2015-04-17)
