--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Change log for zeit.web
 -------------------
 
 - BUG-241: Save brightcove images to HD
-
+- BUG-241: Set default image for Brightcove
 
 1.20.1 (2015-04-17)
 -------------------
