--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.20.3 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-1238: Standard teaser in a onethird area
 
 
 1.20.2 (2015-04-24)
