--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.20.5 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-1535: Polishing comments & ZON author badge
 
 
 1.20.4 (2015-04-27)
