--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,9 @@ Change log for zeit.web
 1.20.5 (unreleased)
 -------------------
 
-- ZON-1626: fix/clearify vertical spaces on centerpages
+- ZON-1628: fix/clearify vertical spaces on centerpages
+
+- ZON-1627: add some webtrekk features hidden as errors 
 
 
 1.20.4 (2015-04-27)
