--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ Change log for zeit.web
 
 - ZON-1626: fix/clearify vertical spaces on centerpages
 
+- ZON-1673: Render comment form through edge side includes
+
 
 1.20.4 (2015-04-27)
 -------------------
