--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - ZON-1626: fix/clearify vertical spaces on centerpages
 
+- ZON-1664: WhatsApp sharing link for mobile
+
 
 1.20.4 (2015-04-27)
 -------------------
