--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,9 +8,9 @@ Change log for zeit.web
 
 - ZON-1535: Polishing comments & ZON author badge
 
-- ZON-1626: fix/clearify vertical spaces on centerpages
+- ZON-1626: Fix/clarify vertical spaces on centerpages
 
-- ZON-1701: fix test-comment form
+- ZON-1701: Fix test-comment form
 
 
 1.20.4 (2015-04-27)
