--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,8 @@ Change log for zeit.web
 
 - ZON-1701: fix test-comment form
 
+- ZON-1704: Generate json for ajax requests on comment interface
+
 
 1.20.4 (2015-04-27)
 -------------------
