--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,9 +4,9 @@ Change log for zeit.web
 1.20.5 (unreleased)
 -------------------
 
-- ZON-1628: fix/clearify vertical spaces on centerpages
+- ZON-1628: Fix/clearify vertical spaces on centerpages
 
-- ZON-1627: add some webtrekk features hidden as errors 
+- ZON-1627: Add some webtrekk features hidden as errors 
 
 - ZON-1660: Implement comment interface.
 
@@ -25,6 +25,7 @@ Change log for zeit.web
 - BUG-226: Fix ZMO image captions should not escape xmlcharrefs
 
 - FIX: Clean up centerpage view attributes and topic link objects
+
 
 1.20.3 (2015-04-27)
 -------------------
