--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.20.5 (unreleased)
 -------------------
 
+- ZON-1534: Improve search implementation test coverage
+
 - ZON-1646: Reply, report and recommend comments
 
 - ZON-1667: Implement search centerpage, spice up cpextra handling
