Back to development: 1.21.2

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.21.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.21.1 (2015-05-05)
 -------------------
 
