--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,6 +26,8 @@ Change log for zeit.web
 
 - ZON-1673: Render comment form through edge side includes
 
+- ZON-1698: Sorting an pagination for comment_thread
+
 
 1.20.4 (2015-04-27)
 -------------------
