--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -50,6 +50,8 @@ Change log for zeit.web
 
 - ZON-1700: Beautfiy comment dates
 
+- ZON-1669: Pagination for Centerpages, like search
+
 
 1.20.4 (2015-04-27)
 -------------------
