--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,10 @@ Change log for zeit.web
 
 - ZON-1683: Invalidate comment thread on all app servers
 
+- ZON-1723: Remove wrong keywords from adcontroller code
+
+- ZON-1724: Add $handle mapping in adcontroller code
+
 
 1.21.1 (2015-05-05)
 -------------------
