--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,8 @@ Change log for zeit.web
 
 - ZON-1724: Add $handle mapping in adcontroller code
 
+- ZON-1523: Rework seo page title and descriptions
+
 
 1.21.1 (2015-05-05)
 -------------------
