ZON-1731: Update changes

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -24,6 +24,8 @@ Change log for zeit.web
 
 - ZON-1520: Add canonical urls to ZON/ZMO
 
+- ZON-1731: Refactor parquet and spektrum to extend default area template
+
 
 1.21.1 (2015-05-05)
 -------------------
