--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,6 +26,8 @@ Change log for zeit.web
 
 - ZON-1520: Add canonical urls to ZON/ZMO
 
+- ZON-1519: Article: prevent superflous pagination slugs
+
 
 1.21.1 (2015-05-05)
 -------------------
