--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -30,6 +30,9 @@ Change log for zeit.web
 
 - ZON-1731: Refactor parquet and spektrum to extend default area template
 
+- BUG-251: Don't display "None" in image captions (fixes regression introduced
+  in 1.20.4 by fix for BUG-226).
+
 
 1.21.1 (2015-05-05)
 -------------------
