Update changelog for hotfix

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,7 @@
 Change log for zeit.web
 =======================
 
-1.21.2 (unreleased)
+1.21.3 (unreleased)
 -------------------
 
 - ZON-1714: Add pagination for comments
@@ -31,6 +31,13 @@ Change log for zeit.web
 - ZON-1519: Article: prevent superflous pagination slugs
 
 - ZON-1731: Refactor parquet and spektrum to extend default area template
+
+- BUG-251: Don't display "None" in image captions (fixes regression introduced
+  in 1.20.4 by fix for BUG-226).
+
+
+1.21.2 (2015-05-15)
+-------------------
 
 - BUG-251: Don't display "None" in image captions (fixes regression introduced
   in 1.20.4 by fix for BUG-226).
