--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - Diverse fixes: fix infobox, fix html conformity, fix a11y errors
 
+- Comments: straighten dates
+
 
 1.22 (2015-05-15)
 -----------------
