--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,8 @@ Change log for zeit.web
 
 - Comments: straighten dates
 
+- ZON-1658: add campaign params to share URLs
+
 
 1.22 (2015-05-15)
 -----------------
