--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,17 +9,15 @@ ATTENTION: Before deploying to production, update cp-areas.xml and cp-regions.xm
 
 - ZON-1733: Enable deeplinks and working redirects for comments
 
-- ZON-1658: add campaign params to share URLs
-
 - ZON-1731: Prepare centerpage areas for dynamic operation
 
-- ZON-1658: add campaign params to share URLs
+- ZON-1658: Add campaign params to share URLs
 
 - DEV-774: Wire up zeit.content.dynamicfolder
 
-- Diverse fixes: fix infobox, fix html conformity, fix a11y errors
+- FIX: Diverse fixes for infobox, HTML conformity and a11y errors
 
-- Comments: straighten dates
+- FIX: Straighten comment dates
 
 
 1.22 (2015-05-15)
@@ -33,7 +31,7 @@ ATTENTION: Before deploying to production, update cp-areas.xml and cp-regions.xm
 
 - ZON-1720: Use new comment API and enable "recommend comment"
 
-- ZON-1729 Setup view defaults to DRY
+- ZON-1729: Setup view defaults to DRY
 
 - ZON-1698: Sorting and pagination for comment_thread
 
