--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - ZON-1713: Enable unflagging recommended comments
 
+- ZON-1749: Add dynamic centerpage collection test folder
+
 - ZON-1732: Add banner code mapping rules and table
 
 - ZON-1569: Upgrade author column images to image groups
