--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ Change log for zeit.web
 
 - ZON-1569: Upgrade author column images to image groups
 
+- ZON-1532: Render raw elements enabled for all devices
+
 - Remove ESI parser javascript library
 
 - ZON-1345: Article body: display images w/ layout 'small' correctly
