--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,9 +12,11 @@ Change log for zeit.web
 
 - ZON-1253: Safeguard jinja tests, modifiers and globals
 
-- Remove ESI parser javascript library
-
 - ZON-1345: Article body: display images w/ layout 'small' correctly
+
+- ZON-1744: Enable friedbert to memcache comment threads
+
+- Remove ESI parser javascript library
 
 
 1.23.1 (2015-05-20)
