--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,6 +22,9 @@ Change log for zeit.web
 
 - Remove ESI parser javascript library
 
+- Hotfix: Repair printbox
+
+
 
 1.23.1 (2015-05-20)
 -------------------
