--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.25 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.24 (2015-05-26)
 -----------------
 
