--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.24.1 (2015-05-29)
+-------------------
+
+- HOTFIX: Skip over missing parquet block layouts
+
+
 1.24 (2015-05-26)
 -----------------
 
