--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,8 @@ Change log for zeit.web
 
 - ZON-1597: Add focussed nextread
 
+- Fix view config for comment postings
+
 
 1.24.1 (2015-05-29)
 -------------------
