--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.26 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.25 (2015-06-03)
 -----------------
 
