--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.26 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ZON-1755: Reorganize traversal anomalies into adapters
 
 
 1.25 (2015-06-03)
