--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.26 (unreleased)
 -----------------
 
+- ZON-1821: Add square grafical teaser
+
 - BUG-58: Prevent that main script is sourced twice
 
 - ZON-1566: Implement video solo page view and basic template
