--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.27 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.26 (2015-06-09)
 -----------------
 
