BUG-267: Invalidate comment_thread
We need to invalidate the comment_thread in zeit.web.magazin
on every request.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.28 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- BUG-267: Invalidate memcache on every request in zeit.web.magazin
 
 
 1.27 (2015-06-09)
