--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.28 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- FIX: Port spektrum and snapshot to 2015 centerpages
 
 
 1.27 (2015-06-09)
