--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.29 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.28 (2015-06-10)
 -----------------
 
