--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - FIX: Port spektrum and snapshot to 2015 centerpages
 
+- NFR: Move spektrum+social rss, search-form and ranking where they belong
+
 
 1.28 (2015-06-10)
 -----------------
