--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,7 @@ Change log for zeit.web
 - FIX: Use comment API for ZMO
        Fix wrong comment count
        Fix feature longform breadcrumb
+       Respect commentsAllowed and commentSectionEnable in ZMO
 
 - FIX: Map old images to new teasers
 
