--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.30 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ZON-1380: Improve beta toggle
 
 
 1.29 (2015-06-12)
