--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.31 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- FIX: Override area raw_query to escape vivi solr validation
 
 
 1.30 (2015-06-12)
