--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.30.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.30.1 (2015-06-15)
 -------------------
 
