--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.30.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- HOTFIX: Set link to /beta. beta/index is nor our Beta-URL.
 
 
 1.30.1 (2015-06-15)
