--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.32 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.31 (2015-06-16)
 -----------------
 
