--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,8 @@ Change log for zeit.web
 
 - ZON-1764: Styling for video single page
 
+- ZON-1765: MedRec Ad on video single page
+
 
 1.30.1 (2015-06-15)
 -------------------
