--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.33 (unreleased)
 -----------------
 
+- ZON-1859: Use pixelperfect fallback image for square teaser
+
 - ZON-1840: Register buzz modules to be available on new centerpages
 
 - ZON-1735: Change label for print source volume number
