--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,8 @@ Change log for zeit.web
 
 - BUG-274: Use zon-square teaser for feature longform
 
+- ZON-1855: Improve customisability of topic teaser
+
 
 1.32 (2015-06-16)
 -----------------
