--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.34 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.33 (2015-06-18)
 -----------------
 
