--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.34 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- FIX: Map legacy images for zon-blog and zon-topic
 
 
 1.33.1 (2015-06-18)
