--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.34 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- FIX: Show user menu for logged in users only
 
 
 1.33.2 (2015-06-18)
