--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.34 (unreleased)
 -----------------
 
+- ZON-1564: Show relative date on homepage
+
 - ZON-1790: Get liveblog metadata through ReSTful API
 
 - ZON-1837: Fix timedeltas for article teaser
