FIX: Allow not_found view for any HTTP method, not just GET.
We recently experienced some view configuration troubles (the
PostCommentResource view was not found for an IColumnArticle, see also
commit:3c37ea6). With this change we at least get a nice-looking 404
page instead of an ugly blank 500 "Internal Server Error".

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.35 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- FIX: Allow not_found view for any HTTP method, not just GET.
 
 
 1.34 (2015-06-23)
