--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.35 (unreleased)
 -----------------
 
+- ZON-1564: (Part 2) Add view property for publish info + timezone
+
 - FIX: Register RenderedLegacyArea via grok
 
 - Improvement testing: Allow mockserver to sleep
