--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.35 (unreleased)
 -----------------
 
+- ZON-1871: Fix topic-teaser background image in iOS
+
 - ZON-1564: (Part 2) Add view property for publish info + timezone
 
 - FIX: Allow not_found view for any HTTP method, not just GET
