--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,6 +16,8 @@ Change log for zeit.web
 
 - Code cleanup: Harmonize template code
 
+- Quickfix: Avoid inappropriate transition of liveblog text in Safari
+
 
 1.34 (2015-06-23)
 -----------------
