--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.35 (unreleased)
 -----------------
 
+- ZON-1866: Beta login enhancements
+
 - FIX: Register RenderedLegacyArea via grok
 
 - Improvement testing: Allow mockserver to sleep
