--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,8 @@ Change log for zeit.web
 
 - ZON-1575: Restore prospective lazy loading for snapshot
 
+- ZON-1897: Transform all video links to contain seo slug
+
 - ZON-1871: Fix topic-teaser background image in iOS
 
 - ZON-1564: (Part 2) Add view property for publish info + timezone
