ZON-1564: Change changes

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.35 (unreleased)
 -----------------
 
+- ZON-1564: Fix video stage thumbnails on resize
+
 - ZON-1866: Beta login enhancements
 
 - BUG-22: Fix for slideshow images being too small in webkit
